<resources>
    <string name="app_name">Browser Picker</string>

    <!-- Screen labels -->
    <string name="activity_label_customizer">List &amp; Action Customization</string>

    <!-- Chooser Activity -->
    <string name="toast_send_intent_warning">No link detected in shared text - choose another app.</string>

    <!-- Chooser Fragment -->
    <string name="open">Open</string>
    <string name="open_error">Opening %s failed. Maybe try another app?</string>

    <!-- Actions -->
    <string name="internal_action_copy">Copy link</string>
    <string name="internal_action_share">Share link</string>
    <string name="internal_entry_non_browser_apps"><i>Non-browser applications</i></string>
    <string name="toast_link_copied_to_clipboard">Link copied to clipboard</string>

    <!-- Main screen -->
    <string name="try_it_out">Try it out!</string>
    <string name="welcome_message">This simple application allows you to choose a web browser from the installed ones when opening links - something that was made impossible in the latest Android versions.</string>
    <string name="privacy_remarks">This app does not track your interactions, doesn\'t send any information to any third-parties (doesn\'t even use internet permission). On top of that the <a href="https://github.com/redborsch/android-browser-picker">full source code</a> is available online.</string>
    <string name="setup_intro">Did you like it? Then make Browser Picker your default browser to see this menu when opening links in other apps!</string>

    <!-- Setup -->
    <string name="default_browser_motivation">You already can choose Browser Picker when sharing links. But if you also want to choose a browser when opening links directly from other applications - make this application your default browser.</string>
    <string name="make_default_browser">Make default browser</string>
    <string name="all_set_message">You are all set!</string>
    <string name="enjoy_message">Enjoy using Browser Picker!</string>
    <string name="setup_note">Experiencing issues? Please check <a href="https://redborsch.github.io/android-browser-picker/#troubleshooting">the troubleshooting page</a>.</string>
    <string name="make_another_browser_default">Make another browser default</string>
    <string name="setup_error_title">Cannot open settings</string>
    <string name="setup_error_explanation">Unfortunately, your device might have non-standard settings or has default apps settings disabled.\n\nYou can still try making Browser Picker default browser yourself.</string>

    <!-- Settings -->
    <string name="settings_reset_warning_title">Reset settings?</string>
    <string name="settings_reset_warning_explanation">Settings will be reset to their default values, all customizations will be lost.</string>
    <!-- Settings menu -->
    <string name="menu_try">Test it!</string>
    <string name="menu_reset_settings">Reset settings…</string>

    <!-- Navigation -->
    <string name="menu_setup">Setup</string>
    <string name="menu_settings">Settings</string>

    <!-- URL validation -->
    <string name="url_validation_error_empty">URL cannot be empty</string>
    <string name="url_validation_error_scheme">URL must start with http:// or https://</string>
    <string name="url_validation_error_general">Invalid URL</string>

    <!-- Customizer -->
    <string name="customizer_confirm">Confirm customizations</string>
    <string name="customizer_entry_hide">Hide entry</string>
    <string name="customizer_entry_show">Show entry</string>
</resources>
