<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:viewBindingIgnore="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            android:src="@drawable/check_circle_24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <TextView
                style="@style/StandardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_set_message" />

            <TextView
                style="@style/StandardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enjoy_message" />
        </LinearLayout>
    </LinearLayout>

    <com.github.redborsch.widget.LinkTextView
        android:id="@+id/setup_note"
        style="@style/StandardText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/setup_note" />
</LinearLayout>
